apps/front-admin/scss/main: add display flex to the main row to prevent the content overflow

--- a/apps/front-admin/src/resources/scss/main_style.scss
+++ b/apps/front-admin/src/resources/scss/main_style.scss
@@ -4,6 +4,10 @@ body, html, #root, .app-container {
   min-height: 100dvh;
 }
 
+.app-container {
+  display: flex;
+}
+
 .in_development {
   text-transform: uppercase;
   font-size: larger;
